<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot__password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/forgotbg1080"
    tools:context="com.accusterltapp.activity.ForgotPassword">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:isScrollContainer="false"
        android:layout_height="wrap_content">




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

                  <LinearLayout
                        android:layout_width="310dp"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:weightSum="3"
                        android:layout_marginLeft="@dimen/height5"
                        android:layout_marginRight="@dimen/height5"
                        android:layout_height="290dp"
                        android:background="@drawable/bgsign">


                      <LinearLayout
                          android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:weightSum="1"
                          android:layout_marginTop="@dimen/height4"
                          android:layout_height="wrap_content">


                          <custom.AvenirRomanTextView
                                  android:layout_gravity="center"
                                  android:gravity="center"
                                  android:layout_width="match_parent"
                                  android:text="@string/forgot_password_resendpassword"
                                  android:textSize="@dimen/textsizelarge"
                                  android:imeOptions="flagNoExtractUi"
                                  android:layout_marginLeft="@dimen/height4"
                                  android:textColor="@color/textwhite"
                                  android:layout_height="wrap_content" />

                          </LinearLayout>


                      <LinearLayout
                          android:layout_width="match_parent"
                          android:orientation="vertical"
                          android:weightSum="1"
                          android:layout_marginLeft="@dimen/height5"
                          android:layout_marginRight="@dimen/height5"
                          android:layout_marginTop="@dimen/height4"
                          android:layout_height="wrap_content">



                          <custom.AvenirRomanTextView
                              android:layout_gravity="center"
                              android:gravity="left"
                              android:layout_width="match_parent"
                              android:text="@string/forgot_password_msg"
                              android:textSize="@dimen/text_size1"
                              android:imeOptions="flagNoExtractUi"
                              android:textColor="@color/textwhite"
                              android:layout_height="wrap_content" />

                      </LinearLayout>





                        <LinearLayout
                            android:layout_marginTop="@dimen/margin4"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:background="@drawable/email_drawble"
                            android:layout_marginLeft="@dimen/height5"
                            android:layout_marginRight="@dimen/height5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <custom.AvenirRomanEditText
                                android:layout_width="match_parent"
                                android:hint="@string/forgot_password_email"
                                android:textColorHint="@color/textcolor"
                                android:textColor="@color/textcolor1"
                                android:id="@+id/et_password"
                                android:inputType="textEmailAddress"
                                android:textSize="@dimen/text_size0"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:paddingRight="5dp"
                                android:paddingLeft="5dp"
                                android:background="@null"
                                android:layout_height="40dp" />
                        </LinearLayout>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/height4"
                    android:layout_marginLeft="@dimen/height5"
                    android:layout_marginRight="@dimen/height5"
                    android:layout_marginTop="@dimen/height6">


                    <custom.AvenirRomanButton
                        android:layout_width="match_parent"
                        android:text="@string/forgot_password_get_password"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/text_size0"
                        android:background="@drawable/forgot_password"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:id="@+id/bt_sign"
                        android:layout_height="40dp" />


                </LinearLayout>
                </LinearLayout>

        </LinearLayout>


    </ScrollView>








</LinearLayout>
