<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg1080"
    android:orientation="vertical"
    tools:context="com.accusterltapp.activity.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/logo" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reactangle"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/email30" />


                        <custom.AvenirRomanEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/login_E_mail_Address"
                            android:inputType="textCapSentences|textAutoCorrect"
                            android:maxLines="1"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/textcolor1"
                            android:textColorHint="@color/textcolor"
                            android:textSize="@dimen/text_size0" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/reactangle"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/password" />


                        <custom.AvenirRomanEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/login_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingRight="5dp"
                            android:singleLine="true"
                            android:textColor="@color/textcolor1"
                            android:textColorHint="@color/textcolor"
                            android:textSize="@dimen/text_size0" />
                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="70dp">


                    <custom.AvenirRomanButton
                        android:id="@+id/bt_sign"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:gravity="center"
                        android:text="@string/login_login"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/text_size0" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>